[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Planet-Joy.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.470588 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="mainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.482353, 0.34902, 0.529412, 1 )

[node name="MarginContainer_mainMenu" type="MarginContainer" parent="."]
margin_right = 1912.0
margin_bottom = 1064.0
custom_constants/margin_right = 200
custom_constants/margin_top = 50
custom_constants/margin_left = 200
custom_constants/margin_bottom = 100

[node name="VBoxContainer_title" type="VBoxContainer" parent="MarginContainer_mainMenu"]
margin_left = 200.0
margin_top = 50.0
margin_right = 1712.0
margin_bottom = 964.0
__meta__ = {
"_editor_description_": ""
}

[node name="Title" type="Label" parent="MarginContainer_mainMenu/VBoxContainer_title"]
margin_top = 178.0
margin_right = 1512.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Title Here!"
align = 1
valign = 1

[node name="VBoxContainer_button" type="VBoxContainer" parent="MarginContainer_mainMenu/VBoxContainer_title"]
margin_left = 250.0
margin_top = 459.0
margin_right = 1250.0
margin_bottom = 914.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="MarginContainer_playButton" type="MarginContainer" parent="MarginContainer_mainMenu/VBoxContainer_title/VBoxContainer_button"]
margin_right = 1000.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="newGameButton" type="Button" parent="MarginContainer_mainMenu/VBoxContainer_title/VBoxContainer_button/MarginContainer_playButton"]
margin_left = 50.0
margin_right = 950.0
margin_bottom = 141.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "New Game"

[node name="MarginContainer_settingsButton" type="MarginContainer" parent="MarginContainer_mainMenu/VBoxContainer_title/VBoxContainer_button"]
margin_top = 156.0
margin_right = 1000.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="settingsButton" type="Button" parent="MarginContainer_mainMenu/VBoxContainer_title/VBoxContainer_button/MarginContainer_settingsButton"]
margin_left = 50.0
margin_right = 950.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Options"

[node name="MarginContainer_creditButton" type="MarginContainer" parent="MarginContainer_mainMenu/VBoxContainer_title/VBoxContainer_button"]
margin_top = 313.0
margin_right = 1000.0
margin_bottom = 455.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="creditsButton" type="Button" parent="MarginContainer_mainMenu/VBoxContainer_title/VBoxContainer_button/MarginContainer_creditButton"]
margin_left = 50.0
margin_right = 950.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Credits"

[node name="quitButton" type="Button" parent="."]
visible = false
margin_left = 463.0
margin_top = 311.0
margin_right = 559.0
margin_bottom = 351.0
text = "Quit"

[connection signal="pressed" from="MarginContainer_mainMenu/VBoxContainer_title/VBoxContainer_button/MarginContainer_playButton/newGameButton" to="." method="_on_newGameButton_pressed"]
[connection signal="pressed" from="MarginContainer_mainMenu/VBoxContainer_title/VBoxContainer_button/MarginContainer_settingsButton/settingsButton" to="." method="_on_settingsButton_pressed"]
[connection signal="pressed" from="MarginContainer_mainMenu/VBoxContainer_title/VBoxContainer_button/MarginContainer_creditButton/creditsButton" to="." method="_on_creditsButton_pressed"]
[connection signal="pressed" from="quitButton" to="." method="_on_quitButton_pressed"]
